unpackaged/main/default/objects/cb_custom_object_20__c/cb_custom_object_20__c.object-meta.xml
<CustomObject>
    <label>cb custom object 20</label>
    <nameField>
        <label>cb custom object 20 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cb custom object 20s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>