unpackaged/main/default/objects/cb_custom_object_20__c/fields/another_currency_field__c.field-meta.xml
<CustomField>
    <fullName>another_currency_field__c</fullName>
    <label>another currency field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>