unpackaged/main/default/objects/cb_custom_object_20__c/fields/cb_number_field_20__c.field-meta.xml
<CustomField>
    <fullName>cb_number_field_20__c</fullName>
    <label>cb number field 20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>