unpackaged/main/default/objects/cb_custom_object_20__c/fields/currency_formula_field__c.field-meta.xml
<CustomField>
    <fullName>currency_formula_field__c</fullName>
    <formula>currency_field__c * 1.1 +  another_currency_field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>currency formula field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>