unpackaged/main/default/objects/cb_custom_object_20__c/fields/email_field__c.field-meta.xml
<CustomField>
    <fullName>email_field__c</fullName>
    <label>email field</label>
    <type>Email</type>
</CustomField>